# chikaima

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.yml  pre-push.sh  start-dev.sh  test.sh  version-patch.sh
.github/workflows/: ci.yml  docker-release.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260605_0001_initial_schema.py  20260606_0002_media_artifacts.py  20260606_0003_workspace_config.py  20260606_0004_embeddings.py  20260607_0005_workspace_access_controls.py  20260607_0006_assets.py  20260611_0007_workspace_vision_aware.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: assets.py  audio.py  auth.py  chat.py  dashboard.py  documents.py  jobs.py  library.py  models.py  providers.py  settings.py  transcripts.py  users.py  video.py
backend/app/core/: config.py  crypto.py  database.py  security.py
backend/app/models/: __init__.py  ai_model.py  asset_chunk.py  audio.py  conversation.py  document.py  embedding.py  job.py  message.py  mixins.py  provider.py  settings.py  summary.py  transcript.py  user.py  video.py  workspace_config.py
backend/app/repositories/: base.py  chat.py  embeddings.py  jobs.py  providers.py  users.py
backend/app/schemas/: assets.py  auth.py  chat.py  common.py  job.py  provider.py  transcript.py  user.py  workspace.py
backend/app/services/: asset_processors.py  asset_search_service.py  auth_service.py  cache_service.py  chat_service.py  dashboard_service.py  embeddings_service.py  job_service.py  library_service.py  llm_service.py  provider_service.py  storage_service.py  transcript_service.py  transcription_provider_service.py  transcription_runtime.py  whisper_transcription_service.py  workspace_service.py
backend/app/services/providers/: base.py  factory.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_asset_processors.py  test_asset_search_service.py  test_assets_endpoint.py  test_audio_endpoint.py  test_auth_deps.py  test_auth_service.py  test_cache_service.py  test_chat_endpoint.py  test_chat_service.py  test_config.py  test_documents_endpoint.py  test_embeddings_service.py  test_job_service.py  test_library_service.py  test_llm_service.py  test_main.py  test_models_endpoint.py  test_provider_adapters.py  test_provider_factory.py  test_provider_service.py  test_providers_endpoint.py  test_storage_service.py  test_tasks.py  test_transcript_service.py  test_transcription_provider_service.py  test_transcription_runtime.py  test_users_endpoint.py  test_whisper_transcription_service.py  test_workspace_service.py
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md  components.md  data-flow.md  system-overview.md
docs/backend/: README.md
docs/database/: README.md
docs/deployment/: README.md
docs/development/: README.md
docs/features/: README.md
docs/frontend/: README.md
docs/getting-started/: README.md  configuration.md  docker-setup.md  first-steps.md  local-setup.md
docs/guides/: README.md
docs/troubleshooting/: README.md
frontend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
frontend/.test-dist/lib/: admin-auth.js  env.js  form-resolver.js
frontend/.test-dist/services/: api.js
frontend/.test-dist/store/: auth-store.js  chat-store.js
frontend/.test-dist/tests/: admin-auth.test.js  api.test.js  auth-store.test.js  chat-store.test.js  env.test.js  form-resolver.test.js  utils.test.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/assets/: asset-preview-dialog.tsx
frontend/components/auth/: auth-form.tsx  authenticated-route.tsx  (+2 more)
frontend/hooks/: use-admin-access.ts  use-auth.ts  use-theme.ts  useChat.ts  useFileAttachments.ts
frontend/lib/: admin-auth.ts  auth.ts  env.ts  form-resolver.ts  library.ts
frontend/services/: api.ts
frontend/store/: admin-auth-store.ts  auth-store.ts  chat-store.ts
frontend/tests/: admin-auth.test.ts  api.test.ts  auth-store.test.ts  chat-store.test.ts  env.test.ts  form-resolver.test.ts  utils.test.ts
frontend/types/: index.ts
(+47 files in other folders)
