[project]
name = "chikaima-backend"
version = "0.1.6"
description = "FastAPI backend for the Chikaima AI workspace"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "anthropic>=0.42.0",
    "celery[redis]>=5.4.0",
    "cryptography>=43.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "google-generativeai>=0.8.3",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "numpy>=1.26.0",
    "ollama>=0.3.0",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.2.1",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "pymupdf>=1.26.1",
    "pytesseract>=0.3.13",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.12",
    "python-pptx>=1.0.2",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "UP046"]

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
    "ruff>=0.15.16",
]
